# ducky

./: README.md
npm/: README.md  main.js  package.json
pypi/: README.md  pyproject.toml
pypi/printducky/: __init__.py
rubygems/: README.md  printducky.gemspec
rubygems/lib/: printducky.rb
